--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -1372,15 +1372,22 @@ setup.prefabs = [
   'fire',
 ];
 
+// get the list of prefabs in the constructor
+// set locally
+// grab random?
+
 class GameManager {
   constructor(rooms) {
+    console.log(rooms);
+    console.log(rooms.filter(r => r.tags.includes("cavern")));
+
+
     this.map = [];
     this.npcs = [];
     this.mapWidth = 10;
     this.mapHeight = 10;
     this.maxDepth = 5;
     this.noiseGen = new FastSimplexNoise({ frequency: 0.01, octaves: 8 });
-    // this.noiseGen = new FastSimplexNoise({ frequency: 0.01, octaves: 4 });
     this.init();
 
     this.fightActive = false;
@@ -1405,6 +1412,7 @@ class GameManager {
     this.eventCharacters = this.generateCharacters();
     console.log(this.eventCharacters);
 
+    // place PC on a valid location
     this.placeCharacter(this.player);
 
     // carve out if necessary (post monsters/characters generation)
