--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -2141,7 +2141,7 @@ let _monsters = [
 
 // outside of class as we were exceeding the call stack
 let generateInteractions = function (char_type) {
-  let _attrs = { 'dialogue': [], 'attribute': null, 'mood': _moods[getRandomInteger(0, _moods.length)] };
+  let _attrs = { 'dialogue': ["hey there", "how's it goin", "good n u?"], 'attribute': null, 'mood': _moods[getRandomInteger(0, _moods.length)] };
   _attrs.attribute = _attributes[getRandomInteger(0, _attributes.length)];
   return _attrs;
 }
@@ -2536,7 +2536,7 @@ class GameManager {
       'boss': true,
       'dialogue': _attr.dialogue,
       'mood': _attr.mood,
-      'dialogueIndex': 0,
+      'dialogueIndex': -1,
       'attribute': _attr.attribute,
     };
 
@@ -2557,7 +2557,7 @@ class GameManager {
           'monster': _m,
           'mood': _attr.mood,
           'dialogue': _attr.dialogue,
-          'dialogueIndex': 0,
+          'dialogueIndex': -1,
           'attribute': _attr.attribute
         };
       }
@@ -2575,6 +2575,25 @@ class GameManager {
   }
   getCharacter(row, col, depth) {
     return this.eventCharacters[`${depth}:${row}:${col}`];
+  }
+
+  getDialogue(row, col, depth) {
+    let _key = `${depth}:${row}:${col}`;
+    if (this.eventCharacters[_key])
+      return this.eventCharacters[_key].dialogue[this.eventCharacters[_key].dialogueIndex];
+    else
+      return "<error>";
+  }
+
+  updateDialogueIndex(row, col, depth) {
+    let _key = `${depth}:${row}:${col}`;
+    console.log(this.eventCharacters[_key])
+    if (this.eventCharacters[_key]) {
+      this.eventCharacters[_key].dialogueIndex++;
+
+      if (this.eventCharacters[_key].dialogueIndex > this.eventCharacters[_key].dialogue.length-1)
+        this.eventCharacters[_key].dialogueIndex = -1;
+    }
   }
   // createCharacter(row, col, depth, type) {
   //   if (type == "monster") {
@@ -3532,14 +3551,27 @@ You click the [[flashlight]] on and are relieved to see the beam at full strengt
             &lt;div style=&quot;text-align:center;&quot;&gt;
               &lt;&lt;set _monsterImgPath to &quot;assets/tyler-rpg-9th-50-more-shades/&quot; + _char.monster.img&gt;&gt;
               [img[_monsterImgPath]]
-              &lt;p&gt;A &lt;&lt;=_char.mood&gt;&gt; &lt;&lt;=_char.monster.name&gt;&gt; blocks your path!  It looks &lt;&lt;=_char.attribute.type&gt;&gt;...&lt;/p&gt;
+
+              &lt;&lt;set _flavors = [&quot;blocks the way&quot;, &quot;blocks your path&quot;, &quot;is in the way&quot;, &quot;is in front of you&quot;, &quot;doesn&#39;t move&quot;]&gt;&gt;
+
+
+              &lt;p&gt;A &lt;&lt;=_char.mood&gt;&gt; &lt;&lt;=_char.monster.name&gt;&gt; &lt;&lt;=either(_flavors)&gt;&gt;!  It looks &lt;&lt;=_char.attribute.type&gt;&gt;...&lt;/p&gt;
             &lt;/div&gt;
 
-            &lt;&lt;set _txt to &quot;Ask the &quot; + _char.monster.name + &quot; how it feels&quot;&gt;&gt;
+            /* dialogue option */
+            &lt;&lt;if _char.dialogueIndex == -1&gt;&gt;
+              &lt;&lt;set _txt to &quot;Ask the &quot; + _char.monster.name + &quot; how it feels&quot;&gt;&gt;
+            &lt;&lt;else&gt;&gt;
+              &lt;&lt;set _txt to $game.getDialogue($game.player.row, $game.player.col, $game.player.depth)&gt;&gt;
+            &lt;&lt;/if&gt;&gt;
 
             &lt;ol&gt;
-            &lt;li&gt;&lt;&lt;link [[Rub your temples|Begin]]&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;&lt;link [[_txt|Begin]]&gt;&gt;&lt;&lt;/link&gt;&gt; &lt;/li&gt;
+            /* &lt;li&gt;&lt;&lt;link [[Rub your temples|Begin]]&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/li&gt; */
+            &lt;li&gt;
+              &lt;&lt;link [[_txt|Begin]]&gt;&gt;
+                &lt;&lt;run $game.updateDialogueIndex($game.player.row, $game.player.col, $game.player.depth)&gt;&gt;
+              &lt;&lt;/link&gt;&gt; 
+            &lt;/li&gt;
             &lt;li&gt;
             &lt;&lt;link [[Use Item]]&gt;&gt;
                &lt;&lt;script&gt;&gt;
