--- a/asciilike/sugarcaves-dialogue.html
+++ b/asciilike/sugarcaves-dialogue.html
@@ -273,7 +273,7 @@ p.thought:after {
 [[boss3]]
 [[boss4]]
 [[boss5]]</tw-passagedata><tw-passagedata pid="2" name="char1" tags="" position="75,475" size="100,100">&lt;div class=&quot;container&quot;&gt;\
-  &lt;div class=&quot;desc&quot;&gt;You see a CharacterType standing in the middle of the cavern. Looking around, you also see a skinny odd mushroom in the corner.  It seems to be about knee-height and radiates a bizarre aura, purplish in nature.  It&#39;s cap is a deep crimson with sickly purple blotches throughout.  It&#39;s stalk is a sallow yellow and appears hairy.&lt;/div&gt;
+  &lt;div class=&quot;desc&quot;&gt;You see a CharacterType standing in the middle of the cavern. Looking around, you also see a skinny odd mushroom in the corner.  It seems to be about knee-height and radiates a bizarre aura, purplish in nature.  Its cap is a deep crimson with sickly purple blotches throughout.  Its stalk is a sallow yellow and appears hairy.&lt;/div&gt;
   
   &lt;div class=&quot;monster&quot;&gt;&lt;p class=&quot;speech-bubble&quot;&gt;Hey, great to see you again!  Do you think you can help me find my way back out?  I&#39;ve got nothing but time it seems.&lt;/p&gt;
 
