--- a/asciilike/index.html
+++ b/asciilike/index.html
@@ -3669,9 +3669,10 @@ You click the [[flashlight]] on and are relieved to see the beam at full strengt
         &lt;/div&gt;
         /*&lt;img src=&quot;https://github.com/efredericks/P5-Projects/blob/main/asciilike/assets/tyler-rpg-9th-50-more-shades/Black%20Ancient.png?raw=true&quot; /&gt;*/
         &lt;div class=&quot;column sidebar&quot;&gt;
+          &lt;&lt;set _charname to &quot;Leer past the &quot; + _char.monster.name&gt;&gt;
           &lt;&lt;button [[Ask about the caves|more]]&gt;&gt;&lt;&lt;/button&gt;&gt;
           &lt;&lt;button [[Ask about the mushroom|mushroom]]&gt;&gt;&lt;&lt;/button&gt;&gt;
-          &lt;&lt;button [[Leer past the _char.monster.name]]&gt;&gt;&lt;&lt;/button&gt;&gt;
+          &lt;&lt;button [[_charname]]&gt;&gt;&lt;&lt;/button&gt;&gt;
         &lt;/div&gt;
       &lt;/div&gt;
       &lt;&lt;/nobr&gt;&gt;
