--- a/feesh/index.html
+++ b/feesh/index.html
@@ -39,6 +39,14 @@
       text-shadow: 2px 2px #ff00ff;
     }
 
+    h2 a {
+      color:aqua;
+      text-decoration: none;
+    }
+    h2 a:hover {
+      color: #76dd2c;
+    }
+
     canvas {
       width: 640px;
       border-radius: 25px;
