--- a/feesh/index.html
+++ b/feesh/index.html
@@ -33,7 +33,6 @@
     }
     h2 {
       text-align: center;
-      margin-top: 10px;
       font-size: 1.2em;
       text-shadow: 2px 2px #ff00ff;
     }
@@ -44,6 +43,13 @@
     }
     h2 a:hover {
       color: #76dd2c;
+    }
+
+    #controls {
+      margin-top: 10px;
+      text-align: center;
+      font-size: 1.2em;
+      text-shadow: 2px 2px #ff00ff;
     }
 
     canvas {
@@ -73,6 +79,7 @@
 <body>
   <h1>./feesh</h1>
   <div id="canvas-container"></div>
+  <div id="controls"></div>
   <h2><a href="http://efredericks.net" target="_blank">erik fredericks</a> // 2021 // made with <a href="https://p5js.org/" target="_blank">p5.js</a></h2>
 </body>
 
