--- a/feesh-mape-t/index.html
+++ b/feesh-mape-t/index.html
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-  <h1>./feesh</h1>
+  <h1>./feesh/mape-k</h1>
   <div id="canvas-container"></div>
   <div id="controls"></div>
   <h2><a href="http://efredericks.net" target="_blank">erik fredericks</a> // 2021 // made with <a href="https://p5js.org/" target="_blank">p5.js</a></h2>
